--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^10.18.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^4.4.5"
+    "vite": "^5.1.5",
+    "gh-pages": "^6.1.1"
   }
 }
